Update detail pages with new content specifications and fix registration buttons
- Updated Bac Track features with detailed specifications (live sessions, group exercises, flexible levels, recorded sessions, study materials, post-bac insights)
- Updated Skills Track features with new detailed specifications (Python, C++, Robotics, AI Tools, Video Editing, Freelancing, Real Projects)
- Updated Combo Package to reflect both track updates
- Fixed registration buttons in detail pages to redirect to register.html with URL parameters
- Updated registration form plan descriptions to match detail page specifications
- Added URL parameter handling in script.js to pre-select plans in registration form
- Removed broken openRegistrationForm() function calls and replaced with proper links

--- a/bac-track.html
+++ b/bac-track.html
@@ -52,10 +52,10 @@
             <div class="plan-header">
                 <h1>🎓 <span data-en="Bac Track" data-fr="Parcours Bac" data-ar="مسار البكالوريا">Bac Track</span></h1>
                 <div class="plan-price">500 DH</div>
-                <p data-en="Perfect for Bac students who want to excel in their studies" 
-                   data-fr="Parfait pour les étudiants au Bac qui veulent exceller dans leurs études" 
-                   data-ar="مثالي لطلاب البكالوريا الذين يريدون التفوق في دراستهم">
-                    Perfect for Bac students who want to excel in their studies
+                <p data-en="Designed for students who want to excel in their Bac exams with comprehensive academic support." 
+                   data-fr="Conçu pour les étudiants qui veulent exceller dans leurs examens du Bac avec un soutien académique complet." 
+                   data-ar="مصمم للطلاب الذين يريدون التفوق في امتحانات البكالوريا مع دعم أكاديمي شامل.">
+                    Designed for students who want to excel in their Bac exams with comprehensive academic support.
                 </p>
             </div>
 
@@ -64,39 +64,57 @@
                     <h2>✅ <span data-en="What You'll Get" data-fr="Ce que vous obtiendrez" data-ar="ما ستحصل عليه">What You'll Get</span></h2>
                     <div class="features-grid">
                         <div class="feature-card">
-                            <i class="fas fa-chalkboard-teacher"></i>
+                            <i class="fas fa-video"></i>
                             <h3 data-en="Live Sessions" data-fr="Sessions en direct" data-ar="جلسات مباشرة">Live Sessions</h3>
-                            <p data-en="Interactive live sessions in Mathematics, Physics, and SVT with expert teachers"
-                               data-fr="Sessions en direct interactives en Mathématiques, Physique et SVT avec des professeurs experts"
-                               data-ar="جلسات مباشرة تفاعلية في الرياضيات والفيزياء والعلوم الطبيعية مع معلمين خبراء">
-                                Interactive live sessions in Mathematics, Physics, and SVT with expert teachers
+                            <p data-en="Live sessions in Maths and Physics (4 sessions per week)"
+                               data-fr="Sessions en direct en Maths et Physique (4 sessions par semaine)"
+                               data-ar="جلسات مباشرة في الرياضيات والفيزياء (4 جلسات في الأسبوع)">
+                                Live sessions in Maths and Physics (4 sessions per week)
                             </p>
                         </div>
                         <div class="feature-card">
-                            <i class="fas fa-tasks"></i>
-                            <h3 data-en="Exercises & Corrections" data-fr="Exercices et corrections" data-ar="تمارين وتصحيحات">Exercises & Corrections</h3>
-                            <p data-en="Weekly exercises with detailed corrections and explanations"
-                               data-fr="Exercices hebdomadaires avec corrections détaillées et explications"
-                               data-ar="تمارين أسبوعية مع تصحيحات مفصلة وتوضيحات">
-                                Weekly exercises with detailed corrections and explanations
+                            <i class="fas fa-users"></i>
+                            <h3 data-en="Group Exercises" data-fr="Exercices en groupe" data-ar="تمارين جماعية">Group Exercises</h3>
+                            <p data-en="Group exercise sessions with detailed corrections and explanations"
+                               data-fr="Sessions d'exercices en groupe avec corrections détaillées et explications"
+                               data-ar="جلسات تمارين جماعية مع تصحيحات مفصلة وشروحات">
+                                Group exercise sessions with detailed corrections and explanations
                             </p>
                         </div>
                         <div class="feature-card">
-                            <i class="fas fa-lightbulb"></i>
-                            <h3 data-en="Study Strategies" data-fr="Stratégies d'étude" data-ar="استراتيجيات الدراسة">Study Strategies</h3>
-                            <p data-en="Proven tips and strategies to boost your grades and study efficiency"
-                               data-fr="Conseils et stratégies éprouvés pour améliorer vos notes et votre efficacité d'étude"
-                               data-ar="نصائح واستراتيجيات مثبتة لتحسين درجاتك وكفاءة دراستك">
-                                Proven tips and strategies to boost your grades and study efficiency
+                            <i class="fas fa-layer-group"></i>
+                            <h3 data-en="Flexible Levels" data-fr="Niveaux flexibles" data-ar="مستويات مرنة">Flexible Levels</h3>
+                            <p data-en="Two flexible levels, based on your current skills, so nothing is too easy or too hard — and you can switch between levels whenever you want"
+                               data-fr="Deux niveaux flexibles, basés sur vos compétences actuelles, pour que rien ne soit trop facile ou trop difficile — et vous pouvez changer de niveau quand vous le souhaitez"
+                               data-ar="مستويان مرنان، بناءً على مهاراتك الحالية، بحيث لا يكون شيء سهلاً جداً أو صعباً جداً — ويمكنك التبديل بين المستويات متى شئت">
+                                Two flexible levels, based on your current skills, so nothing is too easy or too hard — and you can switch between levels whenever you want
                             </p>
                         </div>
                         <div class="feature-card">
-                            <i class="fas fa-calendar-alt"></i>
-                            <h3 data-en="Study Plans" data-fr="Plans d'étude" data-ar="خطط الدراسة">Study Plans</h3>
-                            <p data-en="Personalized weekly study plans tailored to your needs"
-                               data-fr="Plans d'étude hebdomadaires personnalisés adaptés à vos besoins"
-                               data-ar="خطط دراسة أسبوعية مخصصة ومصممة لاحتياجاتك">
-                                Personalized weekly study plans tailored to your needs
+                            <i class="fas fa-play-circle"></i>
+                            <h3 data-en="Recorded Sessions" data-fr="Sessions enregistrées" data-ar="جلسات مسجلة">Recorded Sessions</h3>
+                            <p data-en="Recorded sessions available anytime, including whiteboard explanations so you can review lessons at your own pace"
+                               data-fr="Sessions enregistrées disponibles à tout moment, y compris les explications au tableau pour que vous puissiez réviser les leçons à votre rythme"
+                               data-ar="جلسات مسجلة متاحة في أي وقت، بما في ذلك شروحات السبورة حتى تتمكن من مراجعة الدروس بالسرعة التي تناسبك">
+                                Recorded sessions available anytime, including whiteboard explanations so you can review lessons at your own pace
+                            </p>
+                        </div>
+                        <div class="feature-card">
+                            <i class="fas fa-book"></i>
+                            <h3 data-en="Study Materials" data-fr="Matériaux d'étude" data-ar="مواد دراسية">Study Materials</h3>
+                            <p data-en="High-quality study materials to help you prepare for the school year (lesson PDFs and practice exercises)"
+                               data-fr="Matériaux d'étude de haute qualité pour vous aider à vous préparer pour l'année scolaire (PDFs de leçons et exercices pratiques)"
+                               data-ar="مواد دراسية عالية الجودة لمساعدتك في التحضير للسنة الدراسية (ملفات PDF للدروس وتمارين تطبيقية)">
+                                High-quality study materials to help you prepare for the school year (lesson PDFs and practice exercises)
+                            </p>
+                        </div>
+                        <div class="feature-card">
+                            <i class="fas fa-university"></i>
+                            <h3 data-en="Post-Bac Insights" data-fr="Aperçus post-bac" data-ar="نظرات ما بعد البكالوريا">Post-Bac Insights</h3>
+                            <p data-en="Post-bac insights through live sessions featuring students from various universities"
+                               data-fr="Aperçus post-bac grâce à des sessions en direct avec des étudiants de diverses universités"
+                               data-ar="نظرات ما بعد البكالوريا من خلال جلسات مباشرة مع طلاب من جامعات مختلفة">
+                                Post-bac insights through live sessions featuring students from various universities
                             </p>
                         </div>
                     </div>
@@ -187,9 +205,9 @@
                        data-ar="انضم إلى مئات الطلاب الناجحين الذين حولوا أداءهم الأكاديمي">
                         Join hundreds of successful students who have transformed their academic performance
                     </p>
-                    <button class="btn btn-primary btn-register" onclick="openRegistrationForm('Bac Track')">
+                    <a href="register.html?plan=Bac Track" class="btn btn-primary">
                         👉 <span data-en="Register Now - 500 DH" data-fr="S'inscrire maintenant - 500 DH" data-ar="سجل الآن - 500 درهم">Register Now - 500 DH</span>
-                    </button>
+                    </a>
                 </div>
             </div>
         </div>
