--- a/combo-package.html
+++ b/combo-package.html
@@ -103,25 +103,35 @@
                         <div class="combo-section">
                             <h3>🎓 <span data-en="Bac Track Features" data-fr="Fonctionnalités du Parcours Bac" data-ar="مميزات مسار البكالوريا">Bac Track Features</span></h3>
                             <ul>
-                                <li data-en="Live sessions in Mathematics, Physics, and SVT"
-                                    data-fr="Sessions en direct en Mathématiques, Physique et SVT"
-                                    data-ar="جلسات مباشرة في الرياضيات والفيزياء والعلوم الطبيعية">
-                                    Live sessions in Mathematics, Physics, and SVT
+                                <li data-en="Live sessions in Maths and Physics (4 sessions per week)"
+                                    data-fr="Sessions en direct en Maths et Physique (4 sessions par semaine)"
+                                    data-ar="جلسات مباشرة في الرياضيات والفيزياء (4 جلسات في الأسبوع)">
+                                    🔴 Live sessions in Maths and Physics (4 sessions per week)
                                 </li>
-                                <li data-en="Weekly exercises with detailed corrections"
-                                    data-fr="Exercices hebdomadaires avec corrections détaillées"
-                                    data-ar="تمارين أسبوعية مع تصحيحات مفصلة">
-                                    Weekly exercises with detailed corrections
+                                <li data-en="Group exercise sessions with detailed corrections and explanations"
+                                    data-fr="Sessions d'exercices en groupe avec corrections détaillées et explications"
+                                    data-ar="جلسات تمارين جماعية مع تصحيحات مفصلة وشروحات">
+                                    📝 Group exercise sessions with detailed corrections and explanations
                                 </li>
-                                <li data-en="Study strategies and tips"
-                                    data-fr="Stratégies d'étude et conseils"
-                                    data-ar="استراتيجيات ونصائح الدراسة">
-                                    Study strategies and tips
+                                <li data-en="Two flexible levels, based on your current skills"
+                                    data-fr="Deux niveaux flexibles, basés sur vos compétences actuelles"
+                                    data-ar="مستويان مرنان، بناءً على مهاراتك الحالية">
+                                    🎯 Two flexible levels, based on your current skills
                                 </li>
-                                <li data-en="Personalized study plans"
-                                    data-fr="Plans d'étude personnalisés"
-                                    data-ar="خطط دراسة شخصية">
-                                    Personalized study plans
+                                <li data-en="Recorded sessions available anytime, including whiteboard explanations"
+                                    data-fr="Sessions enregistrées disponibles à tout moment, y compris les explications au tableau"
+                                    data-ar="جلسات مسجلة متاحة في أي وقت، بما في ذلك شروحات السبورة">
+                                    📹 Recorded sessions available anytime, including whiteboard explanations
+                                </li>
+                                <li data-en="High-quality study materials (lesson PDFs and practice exercises)"
+                                    data-fr="Matériaux d'étude de haute qualité (PDFs de leçons et exercices pratiques)"
+                                    data-ar="مواد دراسية عالية الجودة (ملفات PDF للدروس وتمارين تطبيقية)">
+                                    🏆 High-quality study materials (lesson PDFs and practice exercises)
+                                </li>
+                                <li data-en="Post-bac insights through live sessions with university students"
+                                    data-fr="Aperçus post-bac grâce à des sessions en direct avec des étudiants universitaires"
+                                    data-ar="نظرات ما بعد البكالوريا من خلال جلسات مباشرة مع طلاب الجامعة">
+                                    📅 Post-bac insights through live sessions with university students
                                 </li>
                             </ul>
                         </div>
@@ -129,35 +139,40 @@
                         <div class="combo-section">
                             <h3>🚀 <span data-en="Skills Track Features" data-fr="Fonctionnalités du Parcours Compétences" data-ar="مميزات مسار المهارات">Skills Track Features</span></h3>
                             <ul>
-                                <li data-en="Programming (Python, JavaScript)"
-                                    data-fr="Programmation (Python, JavaScript)"
-                                    data-ar="البرمجة (Python، JavaScript)">
-                                    Programming (Python, JavaScript)
+                                <li data-en="Python — learn the fundamentals of programming from scratch"
+                                    data-fr="Python — apprenez les fondamentaux de la programmation à partir de zéro"
+                                    data-ar="Python — تعلم أساسيات البرمجة من الصفر">
+                                    💻 Python — learn the fundamentals of programming from scratch
                                 </li>
-                                <li data-en="Robotics and AI tools"
-                                    data-fr="Robotique et outils IA"
-                                    data-ar="الروبوتات وأدوات الذكاء الاصطناعي">
-                                    Robotics and AI tools
+                                <li data-en="C++ — create practical, real-world applications"
+                                    data-fr="C++ — créez des applications pratiques du monde réel"
+                                    data-ar="C++ — أنشئ تطبيقات عملية من العالم الحقيقي">
+                                    📝 C++ — create practical, real-world applications
                                 </li>
-                                <li data-en="Cybersecurity fundamentals"
-                                    data-fr="Fondamentaux de la cybersécurité"
-                                    data-ar="أساسيات الأمن السيبراني">
-                                    Cybersecurity fundamentals
+                                <li data-en="Robotics — explore Arduino basics, circuits, and mechatronics"
+                                    data-fr="Robotique — explorez les bases d'Arduino, les circuits et la mécatronique"
+                                    data-ar="الروبوتات — استكشف أساسيات Arduino والدوائر والميكاترونيكا">
+                                    🤖 Robotics — explore Arduino basics, circuits, and mechatronics
                                 </li>
-                                <li data-en="Freelancing and digital marketing"
-                                    data-fr="Freelancing et marketing numérique"
-                                    data-ar="العمل الحر والتسويق الرقمي">
-                                    Freelancing and digital marketing
+                                <li data-en="AI Tools — discover how to integrate AI into everyday tasks"
+                                    data-fr="Outils IA — découvrez comment intégrer l'IA dans les tâches quotidiennes"
+                                    data-ar="أدوات الذكاء الاصطناعي — اكتشف كيفية دمج الذكاء الاصطناعي في المهام اليومية">
+                                    🎨 AI Tools — discover how to integrate AI into everyday tasks
                                 </li>
-                                <li data-en="Video editing and graphic design"
-                                    data-fr="Montage vidéo et design graphique"
-                                    data-ar="تحرير الفيديو والتصميم الجرافيكي">
-                                    Video editing and graphic design
+                                <li data-en="Video Editing & Graphic Design — master creative tools for professional visuals"
+                                    data-fr="Montage vidéo et design graphique — maîtrisez les outils créatifs pour des visuels professionnels"
+                                    data-ar="تحرير الفيديو والتصميم الجرافيكي — إتقان الأدوات الإبداعية للمرئيات المهنية">
+                                    🎬 Video Editing & Graphic Design — master creative tools for professional visuals
                                 </li>
-                                <li data-en="Portfolio building projects"
-                                    data-fr="Projets de construction de portfolio"
-                                    data-ar="مشاريع بناء المحفظة">
-                                    Portfolio building projects
+                                <li data-en="Freelancing & Business Skills — learn how to land your first freelance job"
+                                    data-fr="Freelancing et compétences commerciales — apprenez comment décrocher votre premier emploi freelance"
+                                    data-ar="العمل الحر والمهارات التجارية — تعلم كيفية الحصول على أول وظيفة حرة">
+                                    💼 Freelancing & Business Skills — learn how to land your first freelance job
+                                </li>
+                                <li data-en="Real Projects — work on hands-on projects to enrich your portfolio"
+                                    data-fr="Projets réels — travaillez sur des projets pratiques pour enrichir votre portfolio"
+                                    data-ar="مشاريع حقيقية — اعمل على مشاريع عملية لإثراء محفظتك">
+                                    🚀 Real Projects — work on hands-on projects to enrich your portfolio
                                 </li>
                             </ul>
                         </div>
@@ -284,9 +299,9 @@
                         <span class="price-label" data-en="Special Combo Price:" data-fr="Prix Combo Spécial:" data-ar="سعر الباقة المجمعة الخاص:">Special Combo Price:</span>
                         <span class="new-price">1100 DH</span>
                     </div>
-                    <button class="btn btn-primary btn-register" onclick="openRegistrationForm('Combo Package')">
+                    <a href="register.html?plan=Combo Package" class="btn btn-primary">
                         👉 <span data-en="Register Now - 1100 DH" data-fr="S'inscrire maintenant - 1100 DH" data-ar="سجل الآن - 1100 درهم">Register Now - 1100 DH</span>
-                    </button>
+                    </a>
                 </div>
             </div>
         </div>
