--- a/register.html
+++ b/register.html
@@ -72,10 +72,26 @@
                         <h3 data-en="Bac Track" data-fr="Parcours Bac" data-ar="مسار البكالوريا">Bac Track</h3>
                         <div class="price">500 DH</div>
                         <ul class="plan-features">
-                            <li data-en="Live Math, Physics & SVT sessions" data-fr="Sessions en direct Maths, Physique et SVT" data-ar="جلسات مباشرة في الرياضيات والفيزياء والعلوم">Live Math, Physics & SVT sessions</li>
-                            <li data-en="Weekly study plans" data-fr="Plans d'étude hebdomadaires" data-ar="خطط دراسية أسبوعية">Weekly study plans</li>
-                            <li data-en="Exercises and corrections" data-fr="Exercices et corrections" data-ar="تمارين وتصحيحات">Exercises and corrections</li>
-                            <li data-en="Grade-boosting strategies" data-fr="Stratégies d'amélioration des notes" data-ar="استراتيجيات تحسين الدرجات">Grade-boosting strategies</li>
+                            <li data-en="🔴 Live sessions in Maths and Physics (4 sessions per week)" 
+                                data-fr="🔴 Sessions en direct en Maths et Physique (4 sessions par semaine)" 
+                                data-ar="🔴 جلسات مباشرة في الرياضيات والفيزياء (4 جلسات في الأسبوع)">
+                                🔴 Live sessions in Maths and Physics (4 sessions per week)
+                            </li>
+                            <li data-en="📝 Group exercise sessions with detailed corrections" 
+                                data-fr="📝 Sessions d'exercices en groupe avec corrections détaillées" 
+                                data-ar="📝 جلسات تمارين جماعية مع تصحيحات مفصلة">
+                                📝 Group exercise sessions with detailed corrections
+                            </li>
+                            <li data-en="🎯 Two flexible levels based on your skills" 
+                                data-fr="🎯 Deux niveaux flexibles basés sur vos compétences" 
+                                data-ar="🎯 مستويان مرنان بناءً على مهاراتك">
+                                🎯 Two flexible levels based on your skills
+                            </li>
+                            <li data-en="📹 Recorded sessions with whiteboard explanations" 
+                                data-fr="📹 Sessions enregistrées avec explications au tableau" 
+                                data-ar="📹 جلسات مسجلة مع شروحات السبورة">
+                                📹 Recorded sessions with whiteboard explanations
+                            </li>
                         </ul>
                         <div class="plan-check">
                             <i class="fas fa-check-circle"></i>
@@ -89,10 +105,26 @@
                         <h3 data-en="Skills Track" data-fr="Parcours Compétences" data-ar="مسار المهارات">Skills Track</h3>
                         <div class="price">600 DH</div>
                         <ul class="plan-features">
-                            <li data-en="Coding & Tech Skills" data-fr="Compétences en programmation et tech" data-ar="مهارات البرمجة والتقنية">Coding & Tech Skills</li>
-                            <li data-en="Freelancing & Business" data-fr="Freelancing et affaires" data-ar="العمل الحر والأعمال">Freelancing & Business</li>
-                            <li data-en="Creative Skills" data-fr="Compétences créatives" data-ar="المهارات الإبداعية">Creative Skills</li>
-                            <li data-en="Portfolio Projects" data-fr="Projets de portfolio" data-ar="مشاريع المحفظة">Portfolio Projects</li>
+                            <li data-en="💻 Python programming from scratch" 
+                                data-fr="💻 Programmation Python à partir de zéro" 
+                                data-ar="💻 برمجة Python من الصفر">
+                                💻 Python programming from scratch
+                            </li>
+                            <li data-en="🤖 Robotics & Arduino basics" 
+                                data-fr="🤖 Bases de la robotique et Arduino" 
+                                data-ar="🤖 أساسيات الروبوتات وArduino">
+                                🤖 Robotics & Arduino basics
+                            </li>
+                            <li data-en="🎬 Video Editing & Graphic Design" 
+                                data-fr="🎬 Montage vidéo et design graphique" 
+                                data-ar="🎬 تحرير الفيديو والتصميم الجرافيكي">
+                                🎬 Video Editing & Graphic Design
+                            </li>
+                            <li data-en="🚀 Real projects for your portfolio" 
+                                data-fr="🚀 Projets réels pour votre portfolio" 
+                                data-ar="🚀 مشاريع حقيقية لمحفظتك">
+                                🚀 Real projects for your portfolio
+                            </li>
                         </ul>
                         <div class="plan-check">
                             <i class="fas fa-check-circle"></i>
@@ -106,10 +138,26 @@
                         <h3 data-en="Combo Package" data-fr="Package Combo" data-ar="باقة مجمعة">Combo Package</h3>
                         <div class="price">1100 DH</div>
                         <ul class="plan-features">
-                            <li data-en="Everything from Bac Track" data-fr="Tout du parcours Bac" data-ar="كل شيء من مسار البكالوريا">Everything from Bac Track</li>
-                            <li data-en="Everything from Skills Track" data-fr="Tout du parcours Compétences" data-ar="كل شيء من مسار المهارات">Everything from Skills Track</li>
-                            <li data-en="Bonus Udemy courses access" data-fr="Accès bonus aux cours Udemy" data-ar="وصول إضافي لدورات Udemy">Bonus Udemy courses access</li>
-                            <li data-en="Customizable training plan" data-fr="Plan de formation personnalisable" data-ar="خطة تدريب قابلة للتخصيص">Customizable training plan</li>
+                            <li data-en="🎓 Complete Bac Track (Maths & Physics)" 
+                                data-fr="🎓 Parcours Bac complet (Maths et Physique)" 
+                                data-ar="🎓 مسار البكالوريا الكامل (الرياضيات والفيزياء)">
+                                🎓 Complete Bac Track (Maths & Physics)
+                            </li>
+                            <li data-en="🚀 Complete Skills Track (Programming & More)" 
+                                data-fr="🚀 Parcours Compétences complet (Programmation et plus)" 
+                                data-ar="🚀 مسار المهارات الكامل (البرمجة والمزيد)">
+                                🚀 Complete Skills Track (Programming & More)
+                            </li>
+                            <li data-en="🎁 Bonus Udemy courses access" 
+                                data-fr="🎁 Accès bonus aux cours Udemy" 
+                                data-ar="🎁 وصول إضافي لدورات Udemy">
+                                🎁 Bonus Udemy courses access
+                            </li>
+                            <li data-en="⚡ Customizable training plan" 
+                                data-fr="⚡ Plan de formation personnalisable" 
+                                data-ar="⚡ خطة تدريب قابلة للتخصيص">
+                                ⚡ Customizable training plan
+                            </li>
                         </ul>
                         <div class="plan-check">
                             <i class="fas fa-check-circle"></i>
