--- a/skills-track.html
+++ b/skills-track.html
@@ -52,10 +52,10 @@
             <div class="plan-header">
                 <h1>🚀 <span data-en="Skills Track" data-fr="Parcours Compétences" data-ar="مسار المهارات">Skills Track</span></h1>
                 <div class="plan-price">600 DH</div>
-                <p data-en="Learn real-world skills that will set you apart in the digital age" 
-                   data-fr="Apprenez des compétences du monde réel qui vous distingueront à l'ère numérique" 
-                   data-ar="تعلم مهارات العالم الحقيقي التي ستميزك في العصر الرقمي">
-                    Learn real-world skills that will set you apart in the digital age
+                <p data-en="Master in-demand skills through hands-on projects and expert guidance" 
+                   data-fr="Maîtrisez les compétences demandées grâce à des projets pratiques et des conseils d'experts" 
+                   data-ar="إتقان المهارات المطلوبة من خلال مشاريع عملية وإرشادات الخبراء">
+                    Master in-demand skills through hands-on projects and expert guidance
                 </p>
             </div>
 
@@ -69,7 +69,7 @@
                             <p data-en="Learn the fundamentals of programming from scratch"
                                data-fr="Apprenez les fondamentaux de la programmation à partir de zéro"
                                data-ar="تعلم أساسيات البرمجة من الصفر">
-                                Learn the fundamentals of programming from scratch
+                                💻 Python — learn the fundamentals of programming from scratch
                             </p>
                         </div>
                         <div class="feature-card">
@@ -78,43 +78,43 @@
                             <p data-en="Create practical, real-world applications"
                                data-fr="Créez des applications pratiques du monde réel"
                                data-ar="أنشئ تطبيقات عملية من العالم الحقيقي">
-                                Create practical, real-world applications
+                                📝 C++ — create practical, real-world applications
                             </p>
                         </div>
                         <div class="feature-card">
                             <i class="fas fa-robot"></i>
                             <h3 data-en="Robotics" data-fr="Robotique" data-ar="الروبوتات">Robotics</h3>
-                            <p data-en="Explore Arduino basics, circuits, and an introduction to mechatronics"
-                               data-fr="Explorez les bases d'Arduino, les circuits, et une introduction à la mécatronique"
-                               data-ar="استكشف أساسيات Arduino والدوائر ومقدمة في الميكاترونيكا">
-                                Explore Arduino basics, circuits, and an introduction to mechatronics
+                            <p data-en="Explore Arduino basics, circuits, and mechatronics"
+                               data-fr="Explorez les bases d'Arduino, les circuits, et la mécatronique"
+                               data-ar="استكشف أساسيات Arduino والدوائر والميكاترونيكا">
+                                🤖 Robotics — explore Arduino basics, circuits, and an introduction to mechatronics
                             </p>
                         </div>
                         <div class="feature-card">
                             <i class="fas fa-brain"></i>
                             <h3 data-en="AI Tools" data-fr="Outils IA" data-ar="أدوات الذكاء الاصطناعي">AI Tools</h3>
-                            <p data-en="Discover how to integrate AI effectively into everyday tasks"
-                               data-fr="Découvrez comment intégrer efficacement l'IA dans les tâches quotidiennes"
-                               data-ar="اكتشف كيفية دمج الذكاء الاصطناعي بفعالية في المهام اليومية">
-                                Discover how to integrate AI effectively into everyday tasks
+                            <p data-en="Discover how to integrate AI into everyday tasks"
+                               data-fr="Découvrez comment intégrer l'IA dans les tâches quotidiennes"
+                               data-ar="اكتشف كيفية دمج الذكاء الاصطناعي في المهام اليومية">
+                                🎨 AI Tools — discover how to integrate AI effectively into everyday tasks and boost productivity
                             </p>
                         </div>
                         <div class="feature-card">
                             <i class="fas fa-video"></i>
                             <h3 data-en="Video Editing & Graphic Design" data-fr="Montage vidéo et design graphique" data-ar="تحرير الفيديو والتصميم الجرافيكي">Video Editing & Graphic Design</h3>
-                            <p data-en="Master creative tools to produce professional visuals and videos"
-                               data-fr="Maîtrisez les outils créatifs pour produire des visuels et vidéos professionnels"
-                               data-ar="إتقان الأدوات الإبداعية لإنتاج مرئيات وفيديوهات احترافية">
-                                Master creative tools to produce professional visuals and videos
+                            <p data-en="Master creative tools for professional visuals"
+                               data-fr="Maîtrisez les outils créatifs pour des visuels professionnels"
+                               data-ar="إتقان الأدوات الإبداعية للمرئيات المهنية">
+                                🎬 Video Editing & Graphic Design — master creative tools to produce professional visuals and videos
                             </p>
                         </div>
                         <div class="feature-card">
-                            <i class="fas fa-laptop"></i>
+                            <i class="fas fa-briefcase"></i>
                             <h3 data-en="Freelancing & Business Skills" data-fr="Freelancing et compétences commerciales" data-ar="العمل الحر والمهارات التجارية">Freelancing & Business Skills</h3>
-                            <p data-en="Learn how to land your first freelance job and build a strong portfolio"
-                               data-fr="Apprenez comment décrocher votre premier emploi freelance et créer un portfolio solide"
-                               data-ar="تعلم كيفية الحصول على أول وظيفة حرة وبناء محفظة قوية">
-                                Learn how to land your first freelance job and build a strong portfolio
+                            <p data-en="Learn how to land freelance jobs and build portfolio"
+                               data-fr="Apprenez comment décrocher des emplois freelance et créer un portfolio"
+                               data-ar="تعلم كيفية الحصول على وظائف حرة وبناء محفظة">
+                                💼 Freelancing & Business Skills — learn how to land your first freelance job and build a strong portfolio
                             </p>
                         </div>
                         <div class="feature-card">
@@ -123,7 +123,7 @@
                             <p data-en="Work on hands-on projects to enrich your portfolio"
                                data-fr="Travaillez sur des projets pratiques pour enrichir votre portfolio"
                                data-ar="اعمل على مشاريع عملية لإثراء محفظتك">
-                                Work on hands-on projects to enrich your portfolio
+                                🚀 Real Projects — work on hands-on projects to enrich your portfolio and apply what you've learned
                             </p>
                         </div>
                     </div>
@@ -195,11 +195,6 @@
                             📜 Certificate of completion to recognize your effort and help shape your academic journey
                         </li>
                     </ul>
-                            data-fr="Certificat de completion pour renforcer votre CV"
-                            data-ar="شهادة إتمام لتعزيز سيرتك الذاتية">
-                            Certificate of completion to boost your resume
-                        </li>
-                    </ul>
                 </div>
 
                 <div class="plan-cta">
@@ -209,7 +204,7 @@
                        data-ar="انضم إلى الثورة الرقمية واكتسب المهارات التي ستجعلك لا غنى عنك">
                         Join the digital revolution and acquire skills that will make you irreplaceable
                     </p>
-                    <a href="register.html" class="btn btn-primary">
+                    <a href="register.html?plan=Skills Track" class="btn btn-primary">
                         👉 <span data-en="Register Now - 600 DH" data-fr="S'inscrire maintenant - 600 DH" data-ar="سجل الآن - 600 درهم">Register Now - 600 DH</span>
                     </a>
                 </div>
